# AETHER

./: .gitignore  02_Architecture_and_Decisions.md  04_Future_Wow_Features.md  Sprint_01_SRS.md  Sprint_02_SRS.md  Sprint_03_SRS.md  Sprint_04_SRS.md  Sprint_05_SRS.md  Sprint_06_SRS.md  aether-product-bible.md  package-lock.json  package.json  vite.config.ts
src/: Palette.tsx  Widget.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  widget.json
src-tauri/src/: commands.rs  db.rs  hotkey.rs  main.rs
